--- a/decky/static/sass/_forms.scss
+++ b/decky/static/sass/_forms.scss
@@ -138,7 +138,7 @@ input[type="radio"] {
       position: absolute;
       top: 0;
       transition: background $transition;
-      width: 20px;
+      width: 19px;
     }
 
     // Checkbox check
@@ -146,7 +146,7 @@ input[type="radio"] {
       color: $color-text-weak;
       content: '✕';
       font-size: $font-size-default;
-      left: 0.25rem;
+      left: 0.2rem;
       opacity: 0;
       position: absolute;
       top: 0.1rem;
@@ -180,7 +180,7 @@ input[type="radio"] + label {
     border-radius: 50%;
     content: '';
     height: 0.5rem;
-    left: 0.36rem;
+    left: 0.3rem;
     top: 0.39rem;
     width: 0.5rem;
   }
