--- a/decky/static/sass/_grid.scss
+++ b/decky/static/sass/_grid.scss
@@ -6,7 +6,7 @@
   margin-left: 100px;
   margin-top: 59px;
   width: calc(100% - 100px);
-
+  overflow: hidden;
   .container {
     margin: 0;
     width: 100%;
