--- a/decky/static/sass/_mixins.scss
+++ b/decky/static/sass/_mixins.scss
@@ -17,7 +17,7 @@
 
   &:active {
     border-color: $color-shade;
-    color: $color-tint;
+    color: shade($color-text, 15%);
   }
 
   &:hover {
